<resources>
    <string name="app_name">EasyShare</string>
    <string name="generate">Generate QR Code</string>
    <string name="capture">Capture</string>
    <string name="register">Register</string>
    <string name="registered_devices">Registered Devices</string>
    <string name="sortByName">Sort</string>
    <string name="sortName">Name</string>
    <string name="sortDistance">Distance</string>
    <string name="sortLastAccessed">Date</string>
    <string name="files">Files</string>
    <string name="folders">Folders</string>
    <string name="add">Add pair</string>
    <string name="updates">Updates</string>
    <string name="nfc">Share pairs</string>
</resources>
