<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/generate"
        android:icon="@drawable/qr_code"
        android:showAsAction="ifRoom"
        android:title="@string/generate"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/register"
        android:icon="@drawable/scan"
        android:showAsAction="ifRoom"
        android:title="@string/register"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/add"
        android:icon="@drawable/add"
        android:showAsAction="ifRoom"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/updates"
        android:icon="@drawable/info"
        android:showAsAction="ifRoom"
        android:title="@string/updates"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sortByName"
        android:icon="@drawable/sort"
        android:showAsAction="ifRoom"
        android:title="@string/sortByName"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_sortName"
                android:title="@string/sortName" />
            <item
                android:id="@+id/action_sortDistance"
                android:title="@string/sortDistance" />
            <item
                android:id="@+id/action_sortLastAccessed"
                android:title="@string/sortLastAccessed" />
        </menu>
    </item>
</menu>